--- a/assets/Sass/app.scss
+++ b/assets/Sass/app.scss
@@ -1,8 +1,21 @@
-@import 'partials/mixins',
-        'partials/config',
-        'partials/base',
-        'partials/layout',
-        'partials/tools',
-        'partials/typography',
-        'partials/images',
-        'partials/icons';
+// Base Import
+// -----------------------------------------------------------------------------
+
+@import 'base/config',
+        'base/mixins', 
+        'base/base',
+        'base/typography';
+
+// Layout Import
+// -----------------------------------------------------------------------------
+
+@import 'layout/footer',
+        'layout/header',
+        'layout/layout';
+
+// Modules Import
+// -----------------------------------------------------------------------------
+
+@import 'modules/icons',
+        'modules/images',
+        'modules/tools';
