--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -1,16 +1,16 @@
 <footer class="footer -align-center">
   <div class="link">
-    <a href="#" class="-no-border">
+    <a href="https://www.linkedin.com/in/zachmccleaf" class="-no-border" target="_blank">
       <span class="icon icon-linkedin"></span>
     </a>
   </div>
   <div class="link">
-    <a href="#" class="-no-border">
+    <a href="https://github.com/zachmccleaf" class="-no-border" target="_blank">
       <span class="icon icon-github"></span>
     </a>
   </div>
   <div class="link">
-    <a href="#" class="-no-border">
+    <a href="https://twitter.com/zachmccleaf" class="-no-border">
       <span class="icon icon-twitter"></span>
     </a>
   </div>
