--- a/assets/Sass/modules/_tools.scss
+++ b/assets/Sass/modules/_tools.scss
@@ -12,7 +12,7 @@
 }
 
 .list {
-
+  margin-bottom: 40px;
 }
 
 .mockup {
@@ -33,8 +33,9 @@
 }
 
 .block {
-  @include clearfix;
+  @include clearfix; 
   border-bottom: 1px solid lighten($primary, 60%);
+  padding: 0;
   padding-bottom: 160px;
   margin-bottom: 160px;
 
