--- a/partials/_header.html
+++ b/partials/_header.html
@@ -1,13 +1,13 @@
-<header 
+<header
         ng-class="{ '-scrolled': isScrolled }">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-xs-2">
         <span class="link">
           <a href="" download>LOGO</a>
         </span>
       </div>
-      <div class="col-md-6 -align-right">
+      <div class="col-xs-10 -align-right">
         <span class="link">
           <a href="" download>Zach McCleaf | Web Developer</a>
         </span>
